[gd_scene load_steps=14 format=3 uid="uid://cc1fomjf362h5"]

[ext_resource type="Script" uid="uid://dmk7ono2imeae" path="res://addons/flowerwall_postprocess/scripts/flowerwall_pp_script.gd" id="1_8p6dx"]
[ext_resource type="Script" uid="uid://dxlwhj47enyqa" path="res://addons/flowerwall_postprocess/scripts/config ui scripts/presets.gd" id="2_aii1a"]
[ext_resource type="Script" uid="uid://tog6nmrph15b" path="res://addons/flowerwall_postprocess/scripts/config ui scripts/flowerwall_pp_ui_slider.gd" id="8_orrbg"]
[ext_resource type="Script" uid="uid://c5emn1tatcw1r" path="res://addons/flowerwall_postprocess/scripts/config ui scripts/flowerwall_pp_ui_toggle.gd" id="9_30wqw"]
[ext_resource type="Material" uid="uid://dmqqpyc7kkftv" path="res://addons/flowerwall_postprocess/shaders/dithering_shader.material" id="26_aii1a"]
[ext_resource type="Material" uid="uid://bpy0g6i4qtep0" path="res://addons/flowerwall_postprocess/shaders/blurx_shader.material" id="27_yx2vx"]
[ext_resource type="Material" uid="uid://bm0yxl24n8g0j" path="res://addons/flowerwall_postprocess/shaders/crt_shader.material" id="28_aii1a"]
[ext_resource type="Material" uid="uid://cs8x7364epe1n" path="res://addons/flowerwall_postprocess/shaders/blury_shader.material" id="28_yx2vx"]
[ext_resource type="Material" uid="uid://dysby513jvmle" path="res://addons/flowerwall_postprocess/shaders/bloom_shader.material" id="29_aii1a"]
[ext_resource type="Script" uid="uid://dtpi5lt33t6eg" path="res://addons/flowerwall_postprocess/scripts/config ui scripts/close.gd" id="32_8p6dx"]
[ext_resource type="Script" uid="uid://ch7evcy0lie0m" path="res://addons/flowerwall_postprocess/scripts/config ui scripts/save.gd" id="32_jahb0"]

[sub_resource type="LabelSettings" id="LabelSettings_my6d0"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_4uar2"]
font_size = 20

[node name="flowerwall_pp" type="Control" node_paths=PackedStringArray("flowerwall_crt_config_ui", "dither", "preblur_x", "preblur_y", "post_bloom", "crt")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8p6dx")
flowerwall_crt_config_ui = NodePath("UI")
dither = NodePath("dithering")
preblur_x = NodePath("preblur_x")
preblur_y = NodePath("preblur_y")
post_bloom = NodePath("post_bloom")
crt = NodePath("CRT")

[node name="dithering" type="CanvasLayer" parent="."]
layer = 99

[node name="dither" type="ColorRect" parent="dithering"]
material = ExtResource("26_aii1a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="preblur_x" type="CanvasLayer" parent="."]
layer = 100

[node name="x_blur" type="ColorRect" parent="preblur_x"]
material = ExtResource("27_yx2vx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="preblur_y" type="CanvasLayer" parent="."]
layer = 100

[node name="y_blur" type="ColorRect" parent="preblur_y"]
material = ExtResource("28_yx2vx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="CRT" type="CanvasLayer" parent="."]
layer = 102

[node name="crt_shader" type="ColorRect" parent="CRT"]
material = ExtResource("28_aii1a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="post_bloom" type="CanvasLayer" parent="."]
layer = 103

[node name="bloom" type="ColorRect" parent="post_bloom"]
material = ExtResource("29_aii1a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="UI" type="CanvasLayer" parent="."]
layer = 104

[node name="FlowerwallCrtConfigUi" type="ColorRect" parent="UI"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 572.0
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0.121569, 0.121569, 0.121569, 0.721569)

[node name="Presets" type="OptionButton" parent="UI/FlowerwallCrtConfigUi" node_paths=PackedStringArray("color_compression", "downscale", "preblur_sl", "grain_sl", "scanlines_sl", "curve_sl", "vignette_size_sl", "vignette_smoothness_sl", "wiggle_sl", "chromaberr_sl", "brightness", "bloom_t", "bloom_i", "rgb")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 355.5
offset_top = 56.0
offset_right = 506.5
offset_bottom = 87.0
grow_horizontal = 2
item_count = 6
popup/item_0/text = "Sharp"
popup/item_0/id = 0
popup/item_1/text = "Crisp low-res"
popup/item_1/id = 1
popup/item_2/text = "Sharp CRT"
popup/item_2/id = 2
popup/item_3/text = "CRT TV"
popup/item_3/id = 3
popup/item_4/text = "VHS Tape"
popup/item_4/id = 4
popup/item_5/text = "Artoria's prefered settings"
popup/item_5/id = 5
script = ExtResource("2_aii1a")
color_compression = NodePath("../Options/Color Compression/color_compression_slider")
downscale = NodePath("../Options/Downscaling/downscale_slider")
preblur_sl = NodePath("../Options/Pre-Blur Strength/blur_slider")
grain_sl = NodePath("../Options/Grain Strength/grain_slider")
scanlines_sl = NodePath("../Options/Scalines Opacity/scanlines_opacity_slider")
curve_sl = NodePath("../Options/Curvature Slider/curvature_slider")
vignette_size_sl = NodePath("../Options/Vignette Size/vignette_size_slider")
vignette_smoothness_sl = NodePath("../Options/Vignette Smoothness/vignette_smoothness_slider")
wiggle_sl = NodePath("../Options/VHS Wiggle Strength/VHS_wiggle_strength_slider")
chromaberr_sl = NodePath("../Options/Chromatic Aberration Strength/chroma_aberr_strength_slider")
brightness = NodePath("../Options/Brightness/brightness_modifier_slider")
bloom_t = NodePath("../Options/Bloom Threshold/bloom_threshold_slider")
bloom_i = NodePath("../Options/Bloom Intensity/bloom_intensity_slider")
rgb = NodePath("../Options/Enable CRT Grid/RGB_grid_toggle")

[node name="Preset" type="Label" parent="UI/FlowerwallCrtConfigUi/Presets"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -47.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
text = "Preset"
label_settings = SubResource("LabelSettings_my6d0")
horizontal_alignment = 1

[node name="Options" type="VBoxContainer" parent="UI/FlowerwallCrtConfigUi"]
layout_mode = 1
offset_left = 15.0
offset_top = 15.0
offset_right = 561.0
offset_bottom = 720.0

[node name="Downscaling" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Downscaling" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Downscaling"]
layout_mode = 2
size_flags_horizontal = 3
text = "Downscaling"
label_settings = SubResource("LabelSettings_4uar2")

[node name="downscale_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Downscaling"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 32.0
value = 1.0
script = ExtResource("8_orrbg")
_mat = ExtResource("26_aii1a")
_var = "shader_parameter/downscaling_strength"

[node name="Color Compression" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Color Compression" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Color Compression"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color Compression"
label_settings = SubResource("LabelSettings_4uar2")

[node name="color_compression_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Color Compression"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 7.0
script = ExtResource("8_orrbg")
_mat = ExtResource("26_aii1a")
_var = "shader_parameter/color_compression"

[node name="Pre-Blur Strength" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Pre-Blur Strength" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Pre-Blur Strength"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pre-Blur Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="blur_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Pre-Blur Strength"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 9.0
value = 6.0
script = ExtResource("8_orrbg")
_mat = ExtResource("27_yx2vx")
_var = "shader_parameter/radius"

[node name="Brightness" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Brightness" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Brightness"]
layout_mode = 2
size_flags_horizontal = 3
text = "Brightness"
label_settings = SubResource("LabelSettings_4uar2")

[node name="brightness_modifier_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Brightness"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 1.5
step = 0.05
value = 1.05
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/brightness_multiplier"

[node name="Bloom Threshold" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Bloom Threshold" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Bloom Threshold"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bloom Threshold"
label_settings = SubResource("LabelSettings_4uar2")

[node name="bloom_threshold_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Bloom Threshold"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.12
script = ExtResource("8_orrbg")
_mat = ExtResource("29_aii1a")
_var = "shader_parameter/bloom_threshold"

[node name="Bloom Intensity" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Bloom Intensity" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Bloom Intensity"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bloom Intensity"
label_settings = SubResource("LabelSettings_4uar2")

[node name="bloom_intensity_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Bloom Intensity"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 3.0
step = 0.1
value = 0.5
script = ExtResource("8_orrbg")
_mat = ExtResource("29_aii1a")
_var = "shader_parameter/bloom_intensity"

[node name="Chromatic Aberration Strength" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Chrom_ Aberration Strength" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Chromatic Aberration Strength"]
layout_mode = 2
size_flags_horizontal = 3
text = "Chrom. Aberration Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="chroma_aberr_strength_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Chromatic Aberration Strength"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
value = 6.0
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/chromatic_aberration_strength"

[node name="Enable CRT Grid" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Enable RGB Grid" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Enable CRT Grid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enable RGB Grid"
label_settings = SubResource("LabelSettings_4uar2")

[node name="RGB_grid_toggle" type="CheckButton" parent="UI/FlowerwallCrtConfigUi/Options/Enable CRT Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
action_mode = 0
alignment = 2
script = ExtResource("9_30wqw")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/enable_rgb_grid"

[node name="Scalines Opacity" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Scanlines Opacity" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Scalines Opacity"]
layout_mode = 2
size_flags_horizontal = 3
text = "Scanlines Opacity"
label_settings = SubResource("LabelSettings_4uar2")

[node name="scanlines_opacity_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Scalines Opacity"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.45
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/scanline_opacity"

[node name="Grain Strength" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Grain Strength" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Grain Strength"]
layout_mode = 2
size_flags_horizontal = 3
text = "Grain Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="grain_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Grain Strength"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.3
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/grain_strength"

[node name="VHS Wiggle Strength" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="VHS Wiggle Strength" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/VHS Wiggle Strength"]
layout_mode = 2
size_flags_horizontal = 3
text = "VHS Wiggle Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="VHS_wiggle_strength_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/VHS Wiggle Strength"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 0.5
step = 0.001
value = 0.01
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/wiggle"

[node name="Vignette Size" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Vignette Size" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Vignette Size"]
layout_mode = 2
size_flags_horizontal = 3
text = "Vignette Size"
label_settings = SubResource("LabelSettings_4uar2")

[node name="vignette_size_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Vignette Size"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 10.0
step = 0.1
value = 0.4
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/vignette_size"

[node name="Vignette Smoothness" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Vignette smoothness" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Vignette Smoothness"]
layout_mode = 2
size_flags_horizontal = 3
text = "Vignette smoothness"
label_settings = SubResource("LabelSettings_4uar2")

[node name="vignette_smoothness_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Vignette Smoothness"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.05
max_value = 5.0
step = 0.05
value = 0.4
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/vignette_smoothness"

[node name="Curvature Slider" type="HBoxContainer" parent="UI/FlowerwallCrtConfigUi/Options"]
layout_mode = 2

[node name="Curving Strength" type="Label" parent="UI/FlowerwallCrtConfigUi/Options/Curvature Slider"]
layout_mode = 2
size_flags_horizontal = 3
text = "Curving Strength"
label_settings = SubResource("LabelSettings_4uar2")

[node name="curvature_slider" type="HSlider" parent="UI/FlowerwallCrtConfigUi/Options/Curvature Slider"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 1.05
step = 0.005
value = 1.02
script = ExtResource("8_orrbg")
_mat = ExtResource("28_aii1a")
_var = "shader_parameter/curve_power"

[node name="Close" type="Button" parent="UI/FlowerwallCrtConfigUi"]
layout_mode = 0
offset_left = 1014.0
offset_top = 45.0
offset_right = 1140.0
offset_bottom = 99.0
text = "Close
(F1)"
script = ExtResource("32_8p6dx")

[node name="Save" type="Button" parent="UI/FlowerwallCrtConfigUi" node_paths=PackedStringArray("dithering_mat", "preblur_x_mat", "preblur_y_mat", "crt_mat", "bloom_mat")]
layout_mode = 0
offset_left = 862.0
offset_top = 45.0
offset_right = 988.0
offset_bottom = 98.0
text = "Save
"
script = ExtResource("32_jahb0")
dithering_mat = NodePath("../../../dithering/dither")
preblur_x_mat = NodePath("../../../preblur_x/x_blur")
preblur_y_mat = NodePath("../../../preblur_y/y_blur")
crt_mat = NodePath("../../../CRT/crt_shader")
bloom_mat = NodePath("../../../post_bloom/bloom")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Downscaling/downscale_slider" to="." method="_on_downscale_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Color Compression/color_compression_slider" to="." method="_on_color_depth_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Pre-Blur Strength/blur_slider" to="." method="_on_blur_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Brightness/brightness_modifier_slider" to="." method="_on_brightness_modifier_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Bloom Threshold/bloom_threshold_slider" to="." method="_on_bloom_threshold_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Bloom Intensity/bloom_intensity_slider" to="." method="_on_bloom_intensity_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Chromatic Aberration Strength/chroma_aberr_strength_slider" to="." method="_on_chroma_aberr_strength_slider_value_changed"]
[connection signal="toggled" from="UI/FlowerwallCrtConfigUi/Options/Enable CRT Grid/RGB_grid_toggle" to="." method="_on_rgb_grid_toggle_toggled"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Scalines Opacity/scanlines_opacity_slider" to="." method="_on_scanlines_opacity_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Grain Strength/grain_slider" to="." method="_on_grain_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/VHS Wiggle Strength/VHS_wiggle_strength_slider" to="." method="_on_vhs_wiggle_strength_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Vignette Size/vignette_size_slider" to="." method="_on_vignette_size_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Vignette Smoothness/vignette_smoothness_slider" to="." method="_on_vignette_smoothness_slider_value_changed"]
[connection signal="value_changed" from="UI/FlowerwallCrtConfigUi/Options/Curvature Slider/curvature_slider" to="." method="_on_curvature_slider_value_changed"]
